# Isostatic

./: .gitignore  EXAMPLE.txt  README.md  setup.cfg  setup.py  temp.py
doc/: README.md
doc/tutorial/: anglessLoads.md
isostatic/: __init__.py
isostatic/constants/: __init__.py  constantsSymbols.py
isostatic/core/: static.py  system.py
isostatic/elements/: __init__.py  beams.py
isostatic/elements/test/: test_beam_inits.py
isostatic/loads/: __init__.py  loads.py
isostatic/loads/test/: test_loads.py
isostatic/points/: point.py  vectors.py
isostatic/points/test/: test_point.py  test_point_support.py  test_vector.py
isostatic/rotations/: __init__.py  angles.py
isostatic/rotations/test/: test_angles.py
isostatic/structures/: __init__.py  structure.py
isostatic/structures/test/: test_init_structure.py
isostatic/supports/: __init__.py  support.py
isostatic/supports/test/: test_support.py
isostatic/tests/: test_Point.py
