[metadata]
name = isostatic
version = 0.0.1
author = Rodrigo Jimenez
author_email = jimenezhuancarodrigo@gmail.com
description = Un paquete para resolver estructuras isostaticas
long_description = file: README.md
keywords = structures, ingenieria
url = https://github.com/Rodrigo-A-Jimenez/Isostatic
project_urls =
    Bug Tracker = https://github.com/Rodrigo-A-Jimenez/Isostatic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GPL-3.0 License
    Operating System :: OS Independent


[options]
packages=find:


