[metadata]
name = isostatic
version = 0.0.3
author = Rodrigo Jimenez
author_email = jimenezhuancarodrigo@gmail.com
description = Un paquete para resolver estructuras isostaticas
long_description = file: README.md
keywords = structures, ingenieria
url = https://github.com/Rodrigo-A-Jimenez/Isostatic
project_urls =
    Github = https://github.com/Rodrigo-A-Jimenez/Isostatic
    Bug Tracker = https://github.com/Rodrigo-A-Jimenez/Isostatic/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
install_requires = 
    sympy

[options]
packages = find:



