[metadata]
name = isostatic
version = 0.0.8.dev
author = Rodrigo Jimenez
author_email = jimenezhuancarodrigo@gmail.com
maintainer = Rodrigo Jimenez
maintainer_email = jimenezhuancarodrigo@gmail.com
description = Un paquete para resolver estructuras isostaticas
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_file = LICENSE
keywords = structures, ingenieria, engineering, isostatic
url = https://github.com/Rodrigo-A-Jimenez/Isostatic
project_urls =
    Github = https://github.com/Rodrigo-A-Jimenez/Isostatic
    Bug Tracker = https://github.com/Rodrigo-A-Jimenez/Isostatic/issues
    Source = https://github.com/Rodrigo-A-Jimenez/Isostatic
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
install_requires = 
    sympy>=1.4,<2

[options]
packages = find:
install_requires = 
    sympy>=1.4
python_requires = >=3.2


